# pfree_check

./: AlgoUtils.hs  Datatypes.hs  Examples.hs  FreeCheck.hs  FreeCheckNL.hs  Generator.hs  Main.hs  Parser.hs  README  README.md  Reach.hs  ReducePattern.hs  Signature.hs  default.nix  pfreecheck.cabal
examples/: delete  deleteIt  deleteIte  deleteIteL  flatten  flatten2  flatten3  flatten_fail  flatten_fail2  foo  foo2  foo3  insertionSort  insertionSortIt  insertionSortIt2  insertionSortIte  lopstr2020  mergeSort  mergeSortIt  mergeSortIt2  mergeSortIte  multiplyZero  negativeNF  non_linear  otrs  otrs2  removePlus0  removePlus0_fail  reverse  reverseTwice  skolemization  sortedDelete  sortedDeleteIte  sortedDeleteIteL
