name:                pfreecheck
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable pfreecheck
  main-is:             Main.hs
  build-depends:       base, vector, containers, mtl, parsec, ghcjs-dom
  default-language:    Haskell2010
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  other-modules: Datatypes, FreeCheck, Signature, Parser, Examples
