name:                pfreecheck
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable pfreecheck
  main-is:             Main.hs
  build-depends:       base, containers, criterion, deepseq, directory, parsec, random
  default-language:    Haskell2010
  ghc-options:         -O2
  other-modules: Datatypes, FreeCheck, Generator, Signature, Parser
